Add fancy buttons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link href="styles/buttonStyle.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="main">
