Rename inspiration button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <button type="button" id="generateButton" onclick="generatePeptalk()">Generate</button>
       </div>
-      <button type="button" id="inspoButton" onclick="showInspo()">Pep talk generator chart</button>
+      <button type="button" id="inspoButton" onclick="showInspo()">Inspiration</button>
     </div>
     <!-- The Modal -->
     <div id="myModal" class="modal">
